<resources>
    <string name="app_name">ProyectoMoviles</string>
    <string name="activity_main_login">Iniciar Sesión</string>
    <string name="activity_main_question">¿No tienes cuenta?</string>
    <string name="activity_main_createUser">Crear Usuario</string>
    <string name="createUser_activity_title">Crear Usuario</string>
    <string name="createUser_activity_names">Nombres y Apellidos</string>
    <string name="createUser_activity_email">Email</string>
    <string name="createUser_activity_password">Contraseña</string>
    <string name="activity_create_user">Continuar</string>
    <string name="create_user_likes">Queremos conocerte más</string>
    <string name="activity_user2_where">¿De Donde eres?</string>
    <string name="activity_user2_number">¿Cual es tu numero de celular?</string>
    <string name="activity_user2_continue">Continuar</string>
    <string name="activity_login">Iniciar Sesión</string>
    <string name="activity_login_name">Nombre de Usuario</string>
    <string name="activity_login_password">Contraseña</string>
    <string name="activity_login_start">Iniciar</string>
    <string name="activity_welcome_continue">Continuar</string>
    <string name="activity_welcome_title">¡Bienvenido!</string>
    <string name="activity_likes_title">Queremos conocer</string>
    <string name="activity_likes_title2">tus gustos</string>
    <string name="activity_likes_question">¿Que lugares son tus preferencias?</string>
    <string name="activity_likes_next">Registar</string>
    <string name="activity_likes_omitir">Omitir</string>
    <string name="activity_menu_home">Inicio</string>
    <string name="activity_menu_search">Búsqueda</string>
    <string name="activity_menu_bookings">Reservas</string>
    <string name="activity_menu_profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_home_title">Inicio</string>
    <string name="fragment_home_restaurant">Restaurantes</string>
    <string name="fragment_home_bar">Bares</string>
    <string name="fragment_home_cafe">Cafeteria</string>
    <string name="fragment_home_beer">Cerveceria</string>
    <string name="fragment_home_juice">Jugueria</string>
    <string name="fragment_home_subtitle">Lugares Para Reservar</string>
    <string name="activity_menu_reservas">Mis Reservas</string>
    <string name="activity_menu_buscar">Buscar</string>
    <string name="fragment_search_title">Resultados de la Búsqueda</string>
    <string name="fragment_nuevo_usuario">Nuevo Restaurante</string>
    <string name="activity_perfilRestaurante_categoria">Categoria</string>
    <string name="activity_perfilRestaurante_nombre">Restaurante</string>
    <string name="activity_perfilRestaurante_descripcion">descripcion</string>
    <string name="activity_perfilRestaurante_pagina">Pagina WEB</string>
    <string name="activity_perfilRestaurante_reservar">Reservar</string>
    <string name="activity_perfilRestaurante_carta">Carta</string>
    <string name="activity_perfilRestraunte_descripcion">Direccion</string>
    <string name="activity_reserva_title">Reserva</string>
    <string name="activity_reserva_nombre">Nombre y Apellido</string>
    <string name="activity_reserva_sede">Sede</string>
    <string name="activity_reserva_cantidad">N° de Personas</string>
    <string name="activity_reserva_fecha">Fecha</string>
    <string name="activity_reserva_reservar">Reservar</string>
    <string name="activity_codigo_title">¡Felicitaciones!</string>
    <string name="activity_codigo_parrafo1">Tu reserva fue procesada con éxito</string>
    <string name="activity_codigo_parrafo2">Presenta tu codigo QR</string>
    <string name="activity_codigo_parrafo3">al restaurante</string>
    <string name="volver_al_inicio">Volver al Inicio</string>
    <string name="activity_code_reserva">Datos de la Reserva</string>
    <string name="activity_code_volver">Volver al Listado</string>
    <string name="activity_detalle_title">Presenta el codigo QR para que preparen tu pedido</string>
    <string name="activity_detalle_subtitle">Resumen de la Reserva</string>
    <string name="activity_detalle_nombre">Nombre y Apellido</string>
    <string name="activity_detalle_sede">Sede</string>
    <string name="activity_detalle_personas">N° de Personas</string>
</resources>